--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="no_account">No account yet? Create one</string>
+    <string name="welcome">Welcome</string>
 </resources>
